etc/tests/fuzz/errors/type/inferred-index-result.nshape
shape type-inferred-index-result {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "variable declaration: expected str, got int"
  source ny <<'NY'
use std.core

fn first(xs) {
   xs[0]
}

def str s = first([1, 2])
print(s)
NY
}
